Ajout de Fontawesome, modification header et Recherche du lieu

--- a/sass/base/_base.scss
+++ b/sass/base/_base.scss
@@ -19,7 +19,7 @@ body {
     object-fit: cover;
     height: 174px;
   }
-  .section {
+  section {
     width: 100%;
     display: flex;
     flex-wrap: wrap;
