--- a/sass/main.scss
+++ b/sass/main.scss
@@ -6,6 +6,7 @@
 
 @import "./components/buttons";
 
+@import "./layout/header";
 @import "./layout/container";
 @import "./layout/form";
 
@@ -13,3 +14,6 @@
 @import "./pages/_delicedessens.scss";
 @import "./pages/_noteenchantee.scss";
 @import "./pages/_palettedugout.scss";
+
+@import "./scss/fontawesome.scss";
+@import "./scss/solid.scss";
