--- a/public/css/style.css
+++ b/public/css/style.css
@@ -25,10 +25,14 @@ img {
   height: 174px;
 }
 
-section {
+h1 {
+  font-family: "Roboto";
+  text-align: center;
+  font-size: 1.5rem;
+}
+
+h2 {
   width: 100%;
-  display: flex;
-  flex-wrap: wrap;
 }
 
 .header {
@@ -43,14 +47,53 @@ section {
 }
 
 .map  {
+  display: flex;
+  flex-wrap: wrap;
+  flex-direction: column;
   background-color: grey;
   padding: 1rem;
   height: 200px;
 }
 
+.presentation {
+  display: flex;
+  flex-wrap: wrap;
+  flex-direction: column;
+  background-color: grey;
+  padding: 2rem;
+}
+.presentation__information {
+  font-family: "Roboto";
+  font-size: 1rem;
+  font-weight: 300;
+  text-align: center;
+  padding: 1rem;
+}
+
+.steps {
+  display: flex;
+  flex-wrap: wrap;
+  flex-direction: column;
+}
+
+.container {
+  display: flex;
+  flex-wrap: wrap;
+  flex-direction: column;
+  background-color: grey;
+  align-items: center;
+  padding: 1rem;
+}
+
 .restaurant {
+  width: 95%;
+  background-color: white;
+  margin: 1rem 0;
   border-radius: 1rem;
-  width: 80%;
+}
+.restaurant__img {
+  width: 100%;
+  border-radius: 1rem 1rem 0 0;
 }
 
 /*!
@@ -6124,8 +6167,8 @@ readers do not read off random characters that represent icons */
   font-style: normal;
   font-weight: 900;
   font-display: block;
-  src: url("./public/webfonts/fa-solid-900.eot");
-  src: url("./public/webfonts/fa-solid-900.eot?#iefix") format("embedded-opentype"), url("./public/webfonts/fa-solid-900.woff2") format("woff2"), url("./public/webfonts/fa-solid-900.woff") format("woff"), url("./public/webfonts/fa-solid-900.ttf") format("truetype"), url("./public/webfonts/fa-solid-900.svg#fontawesome") format("svg");
+  src: url("./webfonts/fa-solid-900.eot");
+  src: url("./webfonts/fa-solid-900.eot?#iefix") format("embedded-opentype"), url("./webfonts/fa-solid-900.woff2") format("woff2"), url("./webfonts/fa-solid-900.woff") format("woff"), url("./webfonts/fa-solid-900.ttf") format("truetype"), url("./webfonts/fa-solid-900.svg#fontawesome") format("svg");
 }
 .fa,
 .fas {
