--- a/sass/layout/_container.scss
+++ b/sass/layout/_container.scss
@@ -1,3 +1,37 @@
+.map {
+    @include flex;
+    background-color: grey;
+    padding: 1rem;
+    height: 200px;
+}
+
+.presentation {
+    @include flex;
+    background-color: grey;
+    padding: 2rem;
+
+    &__information {
+        @include roboto-soft;
+        text-align: center;
+        padding: 1rem;
+    }
+}
+
+.steps {
+    @include flex;
+}
+
+.container {
+    @include flex;
+    background-color: grey;
+    align-items: center;
+    padding: 1rem;
+}
+
 .restaurant {
 @include restaurant;
+    &__img {
+        width: 100%;
+        border-radius: 1rem 1rem 0 0;
+    }
 }
