--- a/sass/utils/_variables.scss
+++ b/sass/utils/_variables.scss
@@ -2,4 +2,4 @@ $colour-primary: #9356DC;
 $colour-secondary: #FF79DA;
 $colour-tertiary: #99E2D0;
 
-$fa-font-path: "./public/webfonts";
+$fa-font-path: "./webfonts";
