--- a/sass/main.scss
+++ b/sass/main.scss
@@ -9,6 +9,8 @@
 @import "./layout/header";
 @import "./layout/form";
 @import "./layout/container";
+@import "./layout/footer";
+
 
 @import "./pages/_alafrancaise.scss";
 @import "./pages/_delicedessens.scss";
