--- a/sass/utils/_variables.scss
+++ b/sass/utils/_variables.scss
@@ -2,4 +2,7 @@ $colour-primary: #9356DC;
 $colour-secondary: #FF79DA;
 $colour-tertiary: #99E2D0;
 
+$soft-grey: #f7f7f7;
+$hard-grey: #666666;
+
 $fa-font-path: "./webfonts";
