--- a/sass/layout/_container.scss
+++ b/sass/layout/_container.scss
@@ -1,5 +1,6 @@
 .map {
     @include flex;
+
     background-color: grey;
     padding: 1rem;
     height: 200px;
@@ -7,29 +8,37 @@
 
 .presentation {
     @include flex;
-    background-color: grey;
+
+    background-color: $soft-grey;
     padding: 2rem;
 
     &__information {
-        @include roboto-soft;
+        @include soft-typo;
         text-align: center;
-        padding: 1rem;
     }
 }
 
 .steps {
     @include flex;
+
+    padding: 1rem;
+
+    &__element {
+        @include bold-typo;
+    }
 }
 
 .container {
     @include flex;
-    background-color: grey;
+
+    background-color: $soft-grey;
     align-items: center;
     padding: 1rem;
 }
 
 .restaurant {
-@include restaurant;
+    @include restaurant;
+
     &__img {
         width: 100%;
         border-radius: 1rem 1rem 0 0;
