Modification Partie Fonctionnement

--- a/sass/utils/_mixins.scss
+++ b/sass/utils/_mixins.scss
@@ -1,7 +1,14 @@
-@mixin flex {
+@mixin flex-column {
     display: flex;
     flex-wrap: wrap;
     flex-direction: column;
+}
+
+@mixin flex-row {
+    display: flex;
+    flex-wrap: wrap;
+    flex-direction: row;
+
 }
 
 @mixin restaurant {
@@ -19,7 +26,8 @@
 @mixin soft-typo {
     font-family: "Roboto";
     font-size: 1.1rem;
-    font-weight: 300;
+    font-weight:
+     300;
 }
 
 @mixin bold-typo {
