--- a/sass/utils/_variables.scss
+++ b/sass/utils/_variables.scss
@@ -3,6 +3,7 @@ $colour-secondary: #FF79DA;
 $colour-tertiary: #99E2D0;
 
 $soft-grey: #f7f7f7;
-$hard-grey: #666666;
+$mid-grey: #ededed;
+$hard-grey: #4F4F4F;
 
 $fa-font-path: "./webfonts";
