--- a/public/css/style.css
+++ b/public/css/style.css
@@ -63,13 +63,21 @@ h2 {
   height: 2rem;
 }
 
+.map-search-container {
+  height: 50px;
+  width: 100%;
+  background-color: #ededed;
+}
+
 .map  {
   display: flex;
   flex-wrap: wrap;
   flex-direction: column;
-  background-color: grey;
   padding: 1rem;
-  height: 200px;
+}
+.map __container {
+  height: 50px;
+  width: 50px;
 }
 
 .presentation {
@@ -92,10 +100,52 @@ h2 {
   flex-direction: column;
   padding: 1rem;
 }
-.steps__element {
+.steps__description {
   font-family: "Roboto";
   font-size: 1rem;
   font-weight: 500;
+}
+
+.step-block {
+  display: flex;
+  flex-wrap: wrap;
+  flex-direction: row;
+  background-color: #f7f7f7;
+  border-radius: 1rem;
+  margin-bottom: 1rem;
+  padding: 1rem;
+}
+.step-block__number {
+  width: 30px;
+  height: 30px;
+  border-radius: 50%;
+  background-color: #9356DC;
+}
+.step-block__number-container {
+  width: 100%;
+  height: 100%;
+  position: relative;
+}
+.step-block__number-insert {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+}
+.step-block__icon {
+  width: 30px;
+  height: 30px;
+}
+.step-block__icon-container {
+  width: 100%;
+  height: 100%;
+  position: relative;
+}
+.step-block__icon-insert {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
 }
 
 .container {
@@ -119,7 +169,7 @@ h2 {
 }
 
 .footer {
-  background-color: #666666;
+  background-color: #4F4F4F;
   padding: 1rem;
 }
 
