--- a/sass/layout/_container.scss
+++ b/sass/layout/_container.scss
@@ -1,13 +1,24 @@
-.map {
-    @include flex;
+.map-search-container {
+    height: 50px;
+    width: 100%;
+    background-color: $mid-grey;
 
-    background-color: grey;
+    }
+
+.map {
+    @include flex-column;
     padding: 1rem;
-    height: 200px;
+
+    &__container {
+        height: 50px;
+        width: 50px;
+    }
 }
 
+
+
 .presentation {
-    @include flex;
+    @include flex-column;
 
     background-color: $soft-grey;
     padding: 2rem;
@@ -19,17 +30,64 @@
 }
 
 .steps {
-    @include flex;
+    @include flex-column;
 
     padding: 1rem;
 
-    &__element {
+    &__description {
         @include bold-typo;
     }
 }
 
+.step-block {
+    @include flex-row;
+
+    background-color: $soft-grey;
+    border-radius: 1rem;
+    margin-bottom: 1rem;
+    padding: 1rem;
+
+    &__number {
+        width: 30px;
+        height: 30px;
+        border-radius: 50%;
+        background-color: $colour-primary;
+    }
+
+    &__number-container {
+        width: 100%;
+        height: 100%;
+        position: relative;
+    }
+    &__number-insert {
+        position: absolute;
+        top: 50%;
+        left: 50%;
+        transform: translate(-50%, -50%);
+    }
+
+    &__icon {
+        width: 30px;
+        height: 30px;
+    }
+
+    &__icon-container {
+        width: 100%;
+        height: 100%;
+        position: relative;
+
+    }
+    &__icon-insert {
+        position: absolute;
+        top: 50%;
+        left: 50%;
+        transform: translate(-50%, -50%);
+    }
+
+}
+
 .container {
-    @include flex;
+    @include flex-column;
 
     background-color: $soft-grey;
     align-items: center;
