--- a/sass/utils/_mixins.scss
+++ b/sass/utils/_mixins.scss
@@ -26,8 +26,7 @@
 @mixin soft-typo {
     font-family: "Roboto";
     font-size: 1.1rem;
-    font-weight:
-     300;
+    font-weight: 300;
 }
 
 @mixin bold-typo {
