--- a/public/css/style.css
+++ b/public/css/style.css
@@ -37,6 +37,7 @@ h2 {
   font-family: "Roboto";
   font-size: 1.5rem;
   width: 100%;
+  margin: 1rem 0;
 }
 
 .presention__btn {
@@ -118,7 +119,7 @@ h2 {
   flex-wrap: wrap;
   flex-direction: column;
   align-items: center;
-  padding: 1rem;
+  padding: 2rem 1rem 3rem 1rem;
 }
 .steps__description {
   font-family: "Roboto";
@@ -131,17 +132,30 @@ h2 {
   display: flex;
   flex-wrap: wrap;
   flex-direction: row;
-  width: 80%;
+  width: 95%;
   background-color: #f7f7f7;
-  border-radius: 1rem;
-  margin-bottom: 1rem;
+  border-radius: 1.5rem;
+  margin: 0.8rem 1.2rem;
   padding: 1.3rem 0;
+  position: relative;
+}
+.step-block .fas {
+  color: #4F4F4F;
+}
+.step-block .fa-store {
+  transform: scaleX(0.8);
+}
+.step-block .fa-list {
+  transform: scaleX(0.8);
 }
 .step-block__number {
-  width: 30px;
-  height: 30px;
+  width: 25px;
+  height: 25px;
   border-radius: 50%;
   background-color: #9356DC;
+  align-self: center;
+  position: absolute;
+  left: -10px;
 }
 .step-block__number-container {
   width: 100%;
@@ -153,10 +167,15 @@ h2 {
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
+  font-family: "Roboto";
+  font-size: 1rem;
+  font-weight: 500;
+  color: white;
 }
 .step-block__icon {
   width: 30px;
   height: 30px;
+  margin: 0 1.5rem;
 }
 .step-block__icon-container {
   width: 100%;
