--- a/sass/layout/_container.scss
+++ b/sass/layout/_container.scss
@@ -52,7 +52,7 @@
 .steps {
     @include flex-column;
     align-items: center;
-    padding: 1rem;
+    padding: 2rem 1rem 3rem 1rem;
 
     &__description {
         @include bold-typo;
@@ -62,17 +62,31 @@
 
 .step-block {
     @include flex-row;
-    width: 80%;
+    width: 95%;
     background-color: $soft-grey;
-    border-radius: 1rem;
-    margin-bottom: 1rem;
+    border-radius: 1.5rem;
+    margin: 0.8rem 1.2rem;
     padding: 1.3rem 0;
+    position: relative;
+
+    .fas {
+        color: $hard-grey;
+    }
+    .fa-store {
+        transform: scaleX(0.8);
+    }
+    .fa-list{
+        transform: scaleX(0.8);
+    }
 
     &__number {
-        width: 30px;
-        height: 30px;
+        width: 25px;
+        height: 25px;
         border-radius: 50%;
         background-color: $colour-primary;
+        align-self: center;
+        position: absolute;
+        left: -10px;
     }
 
     &__number-container {
@@ -85,12 +99,14 @@
         top: 50%;
         left: 50%;
         transform: translate(-50%, -50%);
+        @include bold-typo;
+        color: white;
     }
 
     &__icon {
         width: 30px;
         height: 30px;
-    }
+        margin: 0 1.5rem;    }
 
     &__icon-container {
         width: 100%;
