--- a/public/css/style.css
+++ b/public/css/style.css
@@ -47,17 +47,19 @@ h2 {
   border-radius: 2rem;
   padding: 1rem;
   margin: 1rem;
-  width: 80%;
+  width: 70%;
   align-self: center;
   color: white;
   background: radial-gradient(#FF79DA, #9356DC);
+  box-shadow: 0.7rem 0.7rem 1rem #e0e0e0;
+  border: thin;
 }
 
 .header {
   display: flex;
   flex-wrap: wrap;
   justify-content: center;
-  padding: 1.2rem;
+  padding: 1.2rem 2.5rem 1.2rem 0;
 }
 
 .logo-ohmyfood {
@@ -110,7 +112,7 @@ h2 {
 .presentation__information {
   font-family: "Roboto";
   font-size: 1.1rem;
-  font-weight: 300;
+  font-weight: 200;
   text-align: center;
 }
 
@@ -203,10 +205,52 @@ h2 {
   background-color: white;
   margin: 1rem 0;
   border-radius: 1rem;
+  position: relative;
 }
 .restaurant__img {
   width: 100%;
   border-radius: 1rem 1rem 0 0;
+}
+.restaurant__new {
+  background-color: #99E2D0;
+  position: absolute;
+  top: 5%;
+  left: 73%;
+  padding: 0.4rem 0.7rem 0.2rem 0.7rem;
+  font-size: 0.9rem;
+  font-weight: 700;
+  color: #008766;
+}
+.restaurant__heart {
+  width: 20px;
+  height: 20px;
+  position: absolute;
+  top: 80%;
+  left: 85%;
+}
+.restaurant__heart-container {
+  width: 100%;
+  height: 100%;
+  position: relative;
+}
+.restaurant__heart-insert {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+}
+.restaurant__name {
+  font-family: "Roboto";
+  font-size: 1rem;
+  font-weight: 500;
+  font-size: 1.2rem;
+  padding: 0.5rem 0 0.1rem 0.8rem;
+}
+.restaurant__description {
+  font-family: "Roboto";
+  font-size: 1.1rem;
+  font-weight: 200;
+  padding: 0.1rem 0 1rem 0.8rem;
 }
 
 .footer {
