--- a/sass/layout/_container.scss
+++ b/sass/layout/_container.scss
@@ -94,6 +94,7 @@
         height: 100%;
         position: relative;
     }
+
     &__number-insert {
         position: absolute;
         top: 50%;
@@ -106,14 +107,15 @@
     &__icon {
         width: 30px;
         height: 30px;
-        margin: 0 1.5rem;    }
+        margin: 0 1.5rem;    
+    }
 
     &__icon-container {
         width: 100%;
         height: 100%;
         position: relative;
-
     }
+
     &__icon-insert {
         position: absolute;
         top: 50%;
@@ -130,12 +132,50 @@
     align-items: center;
     padding: 1rem;
 }
-
 .restaurant {
     @include restaurant;
+    position: relative;
 
     &__img {
         width: 100%;
         border-radius: 1rem 1rem 0 0;
     }
+    &__new {
+        background-color: #99E2D0;
+        position: absolute;
+        top: 5%;
+        left: 73%;
+        padding: 0.4rem 0.7rem 0.2rem 0.7rem;
+        font-size: 0.9rem;
+        font-weight: 700;
+        color: #008766;
+    }
+    &__heart {
+        width: 20px;
+        height: 20px;
+        position: absolute;
+        top: 80%;
+        left: 85%;
+    }
+    &__heart-container {
+        width: 100%;
+        height: 100%;
+        position: relative;
+    }
+    &__heart-insert {
+        position: absolute;
+        top: 50%;
+        left: 50%;
+        transform: translate(-50%, -50%);
+    }
+    &__name {
+        @include bold-typo;
+        font-size: 1.2rem;
+        padding: 0.5rem 0 0.1rem 0.8rem;
+    }
+    &__description {
+        @include soft-typo;
+        padding: 0.1rem 0 1rem 0.8rem;
+    }
+ 
 }
