--- a/sass/layout/_header.scss
+++ b/sass/layout/_header.scss
@@ -2,7 +2,7 @@
     display: flex;
     flex-wrap: wrap;
     justify-content: center;
-    padding: 1.2rem;
+    padding: 1.2rem 2.5rem 1.2rem 0;
 }
 
 .logo-ohmyfood {
