--- a/sass/layout/_container.scss
+++ b/sass/layout/_container.scss
@@ -136,6 +136,18 @@
     @include restaurant;
     position: relative;
 
+    .gradient-rela {
+        position: relative;
+    }
+    .gradient-abso {
+        position:absolute;
+        width: 100%;
+        height: 100%;
+        color: $gradient;
+    }
+
+
+
     &__img {
         width: 100%;
         border-radius: 1rem 1rem 0 0;
@@ -144,10 +156,11 @@
         background-color: #99E2D0;
         position: absolute;
         top: 5%;
-        left: 73%;
+        right: 4%;
         padding: 0.4rem 0.7rem 0.2rem 0.7rem;
         font-size: 0.9rem;
         font-weight: 700;
+        border-radius: 0.1rem;
         color: #008766;
     }
     &__heart {
