--- a/sass/utils/_variables.scss
+++ b/sass/utils/_variables.scss
@@ -2,6 +2,9 @@ $colour-primary: #9356DC;
 $colour-secondary: #FF79DA;
 $colour-tertiary: #99E2D0;
 
+$gradient: radial-gradient(#FF79DA, #9356DC);
+$light-gradient: radial-gradient(hsl(317,100,79), hsl(267,66,65));
+
 $soft-grey: #f7f7f7;
 $mid-grey: #ededed;
 $hard-grey: #4F4F4F;
