Modification ombres polices, coeur avec dégradé, début footer

--- a/sass/layout/_footer.scss
+++ b/sass/layout/_footer.scss
@@ -1,4 +1,15 @@
 .footer {
     background-color: $hard-grey;
     padding: 1rem;
+
+    .footer-font {
+        color: white;
+    }
+
+    &__proposition {
+        @include flex-row;
+        justify-content: unset;
+        color: white;
+        
+    }
 }
