--- a/public/css/style.css
+++ b/public/css/style.css
@@ -40,10 +40,17 @@ h2 {
   margin: 1rem 0;
 }
 
+.cool-text {
+  color: white;
+  font-family: Shrikhand;
+  font-size: 1rem;
+}
+
 .presention__btn {
   font-family: "Roboto";
   font-size: 1rem;
   font-weight: 500;
+  text-shadow: 1px 0 1px rgba(0, 0, 0, 0.3);
   border-radius: 2rem;
   padding: 1rem;
   margin: 1rem;
@@ -77,6 +84,7 @@ h2 {
 .header {
   display: flex;
   flex-wrap: wrap;
+  flex-direction: row;
   justify-content: center;
   padding: 1.2rem 2.5rem 1.2rem 0;
 }
@@ -119,6 +127,7 @@ h2 {
   font-family: "Roboto";
   font-size: 1rem;
   font-weight: 500;
+  text-shadow: 1px 0 1px rgba(0, 0, 0, 0.3);
 }
 
 .presentation {
@@ -132,6 +141,7 @@ h2 {
   font-family: "Roboto";
   font-size: 1.1rem;
   font-weight: 200;
+  text-shadow: 1px 0 1px rgba(0, 0, 0, 0.3);
   text-align: center;
 }
 
@@ -146,6 +156,7 @@ h2 {
   font-family: "Roboto";
   font-size: 1rem;
   font-weight: 500;
+  text-shadow: 1px 0 1px rgba(0, 0, 0, 0.3);
   align-self: center;
 }
 
@@ -153,6 +164,8 @@ h2 {
   display: flex;
   flex-wrap: wrap;
   flex-direction: row;
+  justify-content: center;
+  justify-content: unset;
   width: 95%;
   background-color: #f7f7f7;
   border-radius: 1.5rem;
@@ -191,6 +204,7 @@ h2 {
   font-family: "Roboto";
   font-size: 1rem;
   font-weight: 500;
+  text-shadow: 1px 0 1px rgba(0, 0, 0, 0.3);
   color: white;
 }
 .step-block__icon {
@@ -226,14 +240,12 @@ h2 {
   border-radius: 1rem;
   position: relative;
 }
-.restaurant .gradient-rela {
-  position: relative;
-}
-.restaurant .gradient-abso {
-  position: absolute;
-  width: 100%;
-  height: 100%;
+.restaurant .fas {
+  display: block;
   color: radial-gradient(#FF79DA, #9356DC);
+  background: -webkit-linear-gradient(#9356DC, #FF79DA);
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
 }
 .restaurant__img {
   width: 100%;
@@ -272,6 +284,7 @@ h2 {
   font-family: "Roboto";
   font-size: 1rem;
   font-weight: 500;
+  text-shadow: 1px 0 1px rgba(0, 0, 0, 0.3);
   font-size: 1.2rem;
   padding: 0.5rem 0 0.1rem 0.8rem;
 }
@@ -279,12 +292,24 @@ h2 {
   font-family: "Roboto";
   font-size: 1.1rem;
   font-weight: 200;
+  text-shadow: 1px 0 1px rgba(0, 0, 0, 0.3);
   padding: 0.1rem 0 1rem 0.8rem;
 }
 
 .footer {
   background-color: #4F4F4F;
   padding: 1rem;
+}
+.footer .footer-font {
+  color: white;
+}
+.footer__proposition {
+  display: flex;
+  flex-wrap: wrap;
+  flex-direction: row;
+  justify-content: center;
+  justify-content: unset;
+  color: white;
 }
 
 /*!
