--- a/sass/layout/_container.scss
+++ b/sass/layout/_container.scss
@@ -1,6 +1,5 @@
 .localisation {
     @include flex-row;
-    justify-content: center;
     background-color: $mid-grey;
 
     .fa-map-marker-alt {
@@ -62,6 +61,7 @@
 
 .step-block {
     @include flex-row;
+    justify-content: unset;
     width: 95%;
     background-color: $soft-grey;
     border-radius: 1.5rem;
@@ -127,7 +127,6 @@
 
 .container {
     @include flex-column;
-
     background-color: $soft-grey;
     align-items: center;
     padding: 1rem;
@@ -136,17 +135,13 @@
     @include restaurant;
     position: relative;
 
-    .gradient-rela {
-        position: relative;
-    }
-    .gradient-abso {
-        position:absolute;
-        width: 100%;
-        height: 100%;
+    .fas {
+        display: block;
         color: $gradient;
+        background: -webkit-linear-gradient($colour-primary,$colour-secondary);
+                    -webkit-background-clip: text;
+                    -webkit-text-fill-color: transparent;
     }
-
-
 
     &__img {
         width: 100%;
