--- a/sass/utils/_mixins.scss
+++ b/sass/utils/_mixins.scss
@@ -8,7 +8,7 @@
     display: flex;
     flex-wrap: wrap;
     flex-direction: row;
-
+    justify-content: center;
 }
 
 @mixin restaurant {
@@ -27,11 +27,12 @@
     font-family: "Roboto";
     font-size: 1.1rem;
     font-weight: 200;
-
+    text-shadow: 1px 0 1px rgba(0,0,0,0.3);
 }
 
 @mixin bold-typo {
     font-family: "Roboto";
     font-size: 1rem;
     font-weight: 500;
+    text-shadow: 1px 0 1px rgba(0,0,0,0.3);
 }
