--- a/sass/utils/_variables.scss
+++ b/sass/utils/_variables.scss
@@ -7,6 +7,6 @@ $light-gradient: radial-gradient(hsl(317,100,79), hsl(267,66,65));
 
 $soft-grey: #f7f7f7;
 $mid-grey: #ededed;
-$hard-grey: #4F4F4F;
+$hard-grey: #353535;
 
 $fa-font-path: "./webfonts";
