--- a/public/css/style.css
+++ b/public/css/style.css
@@ -173,8 +173,16 @@ h2 {
   padding: 1.3rem 0;
   position: relative;
 }
+.step-block:hover {
+  background-color: #e4d5f6;
+  transition: background-color 300ms;
+}
+.step-block:hover .fas {
+  color: #9356DC;
+  transition: color 300ms;
+}
 .step-block .fas {
-  color: #4F4F4F;
+  color: #353535;
 }
 .step-block .fa-store {
   transform: scaleX(0.8);
@@ -297,11 +305,24 @@ h2 {
 }
 
 .footer {
-  background-color: #4F4F4F;
-  padding: 1rem;
+  background-color: #353535;
+  padding: 1.5rem;
 }
 .footer .footer-font {
   color: white;
+  font-family: "Roboto";
+  font-size: 1rem;
+  font-weight: 500;
+  text-shadow: 1px 0 1px rgba(0, 0, 0, 0.3);
+}
+.footer .adjust {
+  margin: 0.35rem 0;
+}
+.footer .fas {
+  font-size: 0.8rem;
+}
+.footer__logo {
+  margin-bottom: 1rem;
 }
 .footer__proposition {
   display: flex;
@@ -310,6 +331,25 @@ h2 {
   justify-content: center;
   justify-content: unset;
   color: white;
+}
+.footer__proposition-icon {
+  width: 20px;
+  height: 30px;
+}
+.footer__proposition-icon-container {
+  width: 100%;
+  height: 100%;
+  position: relative;
+}
+.footer__proposition-icon-insert {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+}
+.footer__proposition-text {
+  align-self: center;
+  margin-left: 0.2rem;
 }
 
 /*!
