--- a/public/css/style.css
+++ b/public/css/style.css
@@ -246,11 +246,15 @@ h2 {
   background-color: white;
   margin: 1rem 0;
   border-radius: 1rem;
+  box-shadow: 0.7rem 0.7rem 1rem #c8c8c8;
   position: relative;
+}
+.restaurant:hover {
+  box-shadow: 0.7rem 0.7rem 1rem #828282;
+  transition: all 500ms;
 }
 .restaurant .fas {
   display: block;
-  color: radial-gradient(#FF79DA, #9356DC);
   background: -webkit-linear-gradient(#9356DC, #FF79DA);
   -webkit-background-clip: text;
   -webkit-text-fill-color: transparent;
