--- a/sass/utils/_mixins.scss
+++ b/sass/utils/_mixins.scss
@@ -36,3 +36,11 @@
     font-weight: 500;
     text-shadow: 1px 0 1px rgba(0,0,0,0.3);
 }
+
+@mixin shadow {
+    box-shadow: 0.7rem 0.7rem 1rem rgb(200, 200, 200);
+    &:hover {
+        box-shadow: 0.7rem 0.7rem 1rem rgb(130, 130, 130);
+        transition: all 500ms;
+    }
+}
