--- a/public/css/style.css
+++ b/public/css/style.css
@@ -40,12 +40,6 @@ h2 {
   margin: 1rem 0;
 }
 
-.cool-text {
-  color: white;
-  font-family: Shrikhand;
-  font-size: 1rem;
-}
-
 .presention__btn {
   font-family: "Roboto";
   font-size: 1rem;
@@ -90,7 +84,7 @@ h2 {
 }
 
 .logo-ohmyfood {
-  height: 2rem;
+  height: 1.8rem;
 }
 
 .localisation {
@@ -312,6 +306,11 @@ h2 {
   background-color: #353535;
   padding: 1.5rem;
 }
+.footer a {
+  font-family: Shrikhand;
+  color: white;
+  font-size: 1rem;
+}
 .footer .footer-font {
   color: white;
   font-family: "Roboto";
@@ -354,6 +353,45 @@ h2 {
 .footer__proposition-text {
   align-self: center;
   margin-left: 0.2rem;
+}
+
+.one-restaurant {
+  display: flex;
+  flex-wrap: wrap;
+  flex-direction: column;
+}
+.one-restaurant__img {
+  height: 260px;
+  width: 100%;
+  position: relative;
+}
+.one-restaurant__information {
+  display: flex;
+  flex-wrap: wrap;
+  flex-direction: row;
+  justify-content: center;
+  justify-content: space-around;
+  position: absolute;
+  top: 280px;
+  width: 100%;
+  background-color: white;
+  border-radius: 3rem 3rem 0 0;
+  padding: 2rem 0;
+}
+.one-restaurant__information .fas {
+  display: block;
+  background: -webkit-linear-gradient(#9356DC, #FF79DA);
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
+}
+.one-restaurant__information-name {
+  font-family: Shrikhand;
+  color: black;
+  font-size: 1.8rem;
+}
+.one-restaurant__information-heart {
+  position: unset;
+  align-self: center;
 }
 
 /*!
