--- a/public/css/style.css
+++ b/public/css/style.css
@@ -40,7 +40,7 @@ h2 {
   margin: 1rem 0;
 }
 
-.presention__btn {
+.btn {
   font-family: "Roboto";
   font-size: 1rem;
   font-weight: 500;
@@ -57,10 +57,10 @@ h2 {
   position: relative;
   z-index: 1;
 }
-.presention__btn:hover::after {
+.btn:hover::after {
   opacity: 1;
 }
-.presention__btn::after {
+.btn::after {
   content: "";
   border-radius: 2rem;
   box-shadow: 0.7rem 0.7rem 1rem #828282;
@@ -85,6 +85,65 @@ h2 {
 
 .logo-ohmyfood {
   height: 1.8rem;
+}
+
+.footer {
+  background-color: #353535;
+  padding: 1.5rem;
+}
+.footer a {
+  font-family: Shrikhand;
+  color: white;
+  font-size: 1rem;
+}
+.footer .footer-font {
+  color: white;
+  font-family: "Roboto";
+  font-size: 1rem;
+  font-weight: 500;
+  text-shadow: 1px 0 1px rgba(0, 0, 0, 0.3);
+}
+.footer .adjust {
+  margin: 0.35rem 0;
+}
+.footer .fas {
+  font-size: 0.8rem;
+}
+.footer__logo {
+  margin-bottom: 1rem;
+}
+.footer__proposition {
+  display: flex;
+  flex-wrap: wrap;
+  flex-direction: row;
+  justify-content: center;
+  justify-content: unset;
+  color: white;
+}
+.footer__proposition-icon {
+  width: 20px;
+  height: 30px;
+}
+.footer__proposition-icon-container {
+  width: 100%;
+  height: 100%;
+  position: relative;
+}
+.footer__proposition-icon-insert {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+}
+.footer__proposition-text {
+  align-self: center;
+  margin-left: 0.2rem;
+}
+
+.footer-position-adjust {
+  position: absolute;
+  top: 1385px;
+  box-sizing: border-box;
 }
 
 .localisation {
@@ -302,68 +361,21 @@ h2 {
   padding: 0.1rem 0 1rem 0.8rem;
 }
 
-.footer {
-  background-color: #353535;
-  padding: 1.5rem;
-}
-.footer a {
-  font-family: Shrikhand;
-  color: white;
-  font-size: 1rem;
-}
-.footer .footer-font {
-  color: white;
-  font-family: "Roboto";
-  font-size: 1rem;
-  font-weight: 500;
-  text-shadow: 1px 0 1px rgba(0, 0, 0, 0.3);
-}
-.footer .adjust {
-  margin: 0.35rem 0;
-}
-.footer .fas {
-  font-size: 0.8rem;
-}
-.footer__logo {
-  margin-bottom: 1rem;
-}
-.footer__proposition {
-  display: flex;
-  flex-wrap: wrap;
-  flex-direction: row;
-  justify-content: center;
-  justify-content: unset;
-  color: white;
-}
-.footer__proposition-icon {
-  width: 20px;
-  height: 30px;
-}
-.footer__proposition-icon-container {
-  width: 100%;
-  height: 100%;
-  position: relative;
-}
-.footer__proposition-icon-insert {
-  position: absolute;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%);
-}
-.footer__proposition-text {
-  align-self: center;
-  margin-left: 0.2rem;
-}
-
-.one-restaurant {
+.one-restaurant-img {
   display: flex;
   flex-wrap: wrap;
   flex-direction: column;
 }
-.one-restaurant__img {
+.one-restaurant-img__img {
   height: 260px;
   width: 100%;
   position: relative;
+}
+
+.one-restaurant {
+  position: absolute;
+  top: 280px;
+  width: 100%;
 }
 .one-restaurant__information {
   display: flex;
@@ -371,10 +383,7 @@ h2 {
   flex-direction: row;
   justify-content: center;
   justify-content: space-around;
-  position: absolute;
-  top: 280px;
-  width: 100%;
-  background-color: white;
+  background-color: #f7f7f7;
   border-radius: 3rem 3rem 0 0;
   padding: 2rem 0;
 }
@@ -392,6 +401,80 @@ h2 {
 .one-restaurant__information-heart {
   position: unset;
   align-self: center;
+}
+
+main {
+  top: 280px;
+  background-color: #f7f7f7;
+}
+
+.part {
+  display: flex;
+  flex-wrap: wrap;
+  flex-direction: column;
+}
+.part__title {
+  font-family: "Roboto";
+  font-size: 1.1rem;
+  font-weight: 200;
+  text-shadow: 1px 0 1px rgba(0, 0, 0, 0.3);
+  padding: 0.2rem 1rem;
+}
+.part__highlight {
+  margin: 0 1rem;
+  border: #99E2D0 1px double;
+  width: 40px;
+}
+.part__all-block {
+  display: flex;
+  flex-wrap: wrap;
+  flex-direction: row;
+  justify-content: center;
+  justify-content: space-between;
+  align-self: center;
+  width: 95%;
+  background-color: white;
+  margin: 1rem 0;
+  border-radius: 1rem;
+  margin: 0.4rem 0;
+  box-shadow: 0.7rem 0.7rem 1rem #c8c8c8;
+}
+.part__all-block:hover {
+  box-shadow: 0.7rem 0.7rem 1rem #828282;
+  transition: all 500ms;
+}
+.part__all-block-title {
+  width: 100%;
+  font-family: "Roboto";
+  font-size: 1rem;
+  font-weight: 500;
+  text-shadow: 1px 0 1px rgba(0, 0, 0, 0.3);
+  font-size: 1.1rem;
+  padding: 0.7rem;
+}
+.part__all-block-precision {
+  font-family: "Roboto";
+  font-size: 1.1rem;
+  font-weight: 200;
+  text-shadow: 1px 0 1px rgba(0, 0, 0, 0.3);
+  font-size: 0.9rem;
+  padding: 0 0 0.7rem 0.7rem;
+}
+.part__all-block-price {
+  font-family: "Roboto";
+  font-size: 1rem;
+  font-weight: 500;
+  text-shadow: 1px 0 1px rgba(0, 0, 0, 0.3);
+  font-size: 1rem;
+  padding: 0 1rem 0.7rem 0;
+}
+
+.order {
+  display: flex;
+  flex-wrap: wrap;
+  flex-direction: column;
+  margin: 2rem;
+  position: relative;
 }
 
 /*!
