--- a/sass/layout/_header.scss
+++ b/sass/layout/_header.scss
@@ -1,15 +1,15 @@
 .header {
     @include flex-row;
-    padding: 1.2rem 2.5rem 1.2rem 0;
+    padding: 1.2rem 2.5rem 1rem 2.5rem;
 
     .fa-arrow-left {
         align-self: center;
         position: absolute;
-        left: 20px;
+        left: 25px;
     }
 }
 
 .logo-ohmyfood {
-    height: 1.8rem;
+    height: 1.7rem;
 }
 
