--- a/sass/utils/_mixins.scss
+++ b/sass/utils/_mixins.scss
@@ -12,9 +12,8 @@
 }
 
 @mixin restaurant {
-    width: 95%;
+    width: 85%;
     background-color: white;
-    margin: 1rem 0;
     border-radius: 1rem;
 }
 
@@ -56,4 +55,10 @@
     background: -webkit-linear-gradient($colour-primary,$colour-secondary);
                 -webkit-background-clip: text;
                 -webkit-text-fill-color: transparent;
+}
+
+@mixin tablet-desktop {
+    @media screen and (min-width: 1023px) {
+        @content;
+    }
 }
