--- a/sass/layout/_footer.scss
+++ b/sass/layout/_footer.scss
@@ -1,6 +1,7 @@
 .footer {
     background-color: $hard-grey;
     padding: 1.5rem;
+    animation: background-spinner 3000ms;
     
     a {
         @include cool-text(white, 1rem);
@@ -10,9 +11,7 @@
         @include bold-typo;
     }
 
-    .adjust {
-        margin:0.35rem 0;
-    }
+
 
     .fas {
         font-size: 0.8rem;
@@ -50,5 +49,9 @@
             margin-left: 0.2rem;
         }
         
+    }
+    
+    &__contact {
+        margin:0.35rem 0;
     }
 }
