--- a/sass/pages/_index.scss
+++ b/sass/pages/_index.scss
@@ -48,8 +48,12 @@
         text-align: center;
     }
     &__btn {
-        margin: 1.5rem;
+        margin: 1.2rem;
         width: 70%;
+
+        @include tablet-desktop {
+            width: 40%
+        }
 
     }
 }
@@ -156,7 +160,7 @@
     @include flex-column;
     background-color: $soft-grey;
     align-items: center;
-    padding: 1rem;
+    padding: 2.5rem 1rem 3.5rem 1rem;
     animation: background-spinner 3000ms;
 
     @include tablet-desktop {
@@ -169,6 +173,7 @@
     @include restaurant;
     @include shadow;
     position: relative;
+    margin: 0.5rem 0;
 
     @include tablet-desktop {
         width: 23%;
