--- a/sass/pages/_palettedugout.scss
+++ b/sass/pages/_palettedugout.scss
@@ -24,13 +24,19 @@
         }
 
         @include flex-row;
-        justify-content: space-around;
+        justify-content: unset;
         padding: 2rem 0;
         width: 100%;
 
 
         &-name {
             @include cool-text;
+            width: 85%;
+            text-align: center;
+
+            @include tablet-desktop {
+                width: 95%;
+            }
         }
 
         &-heart {
@@ -81,6 +87,7 @@ main {
         justify-content: space-between;
         align-self: center;
         @include restaurant;
+        width: 85%;
         margin-bottom: 0.8rem;
         padding: 0.8rem 1.1rem 0.6rem 0.8rem;
         @include shadow;
@@ -122,5 +129,15 @@ main {
 
     @include tablet-desktop {
         width: 100%;
+    }
+
+    &__btn {
+        margin: 1rem;
+        width: 70%;
+
+        @include tablet-desktop {
+            width: 30%;
+        }
+
     }
 }
